# MOSS

./: .gitignore  CODE_REVIEW.md  LICENSE  README.md  TODO.md  Z_COORD_CHANGES.md  conda-lock.yml  environment.yml  pyproject.toml  requirements.txt
examples/fafb_lsd_demo/: .gitignore  README.md  build_demo.py  requirements.txt
examples/fafb_lsd_demo/tutorial/: README.md  download_data.py
examples/fafb_lsd_demo/tutorial/scripts/: mov_to_gif.sh
examples/tutorial/: .gitignore  README.md  download_data.py  project.json
segmentation_suite/: __init__.py  launcher.py  mtlsd_model_compat.py  project_config.py  training_wizard.py  zarr_image_source.py
segmentation_suite/models/architectures/: __init__.py  lsd_boundary_2d.py  unet_3d.py  unet_affinities.py  unet_deep.py  unet_deep_dice.py  unet_deep_dice_25d.py  unet_deep_dice_25d_v2.py  unet_deep_dice_dwarf25d_v2.py  unet_deep_dice_dwarf25d_zcoord.py  unet_deep_dice_sam2.py  unet_deep_dice_v2.py
segmentation_suite/network/: client.py  protocol.py  server.py
segmentation_suite/widgets/: __init__.py  loss_plot_widget.py  optimized_canvas.py  paint_canvas.py  subproject_panel.py  training_data_reviewer.py
segmentation_suite/wizard_pages/: __init__.py  cleanup_page.py  finish_page.py  home_page.py  interactive_training_page.py  prediction_page.py  segmentation_combined_page.py  setup_page.py
segmentation_suite/workers/: predict_worker.py  reslice_worker.py  rotate_worker.py  train_worker.py  viewport_predict_worker.py
tests/: test_project_config.py
