[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "segmentation-suite"
version = "1.1.0"
description = "MOSS - Microscopy Oriented Segmentation with Supervision. Interactive segmentation tool with U-Net training and prediction."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # PyQt6 wheels >=6.8 fail to import on Windows (QtCore DLL load error) and
    # their Qt6 runtime wheels are not lockable by conda-lock on Linux/macOS;
    # cap below 6.8 on all platforms (binding + Qt6 runtime in the 6.7.x series).
    "PyQt6>=6.4.0,<6.8",
    "PyQt6-Qt6>=6.4.0,<6.8",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.7.0",
    "scikit-image>=0.20.0",
    "tifffile>=2023.1.0",
    "imagecodecs>=2023.1.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "scipy>=1.10.0",
    "Pillow>=9.0.0",
    "websockets>=12.0",
    "pyqtgraph>=0.13.0",
    "psutil>=5.9.0",
    "PyOpenGL>=3.1.0",
    "tensorstore>=0.1.45",
    "zarr>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
moss = "segmentation_suite.launcher:main"

[project.urls]
Homepage = "https://github.com/StructuralNeurobiologyLab/MOSS"

[tool.setuptools.packages.find]
where = ["."]
include = ["segmentation_suite*"]
